# TESSideboardConverter

./: .gitignore  README.md  TESSideboardConverter.cabal  sideboard.html
src/: CardNameCompressor.hs  Main.hs
