name:                TESSideboardConverter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/exallium/TESSideboardConverter#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Hart
maintainer:          alex.hart658@gmail.com
copyright:           Copyright: (c) 2016 Alex Hart
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable TESSideboardConverter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hxt >= 9.3.1.16 && < 9.4
                     , HandsomeSoup >= 0.4.2 && < 0.5
                     , regex-compat >= 0.95.1 && < 1.0
  other-modules:       CardNameCompressor
